add ip address and browser details

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "9.5.3",
     "react": "16.13.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "16.13.1",
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.2.0"
